Implement evaluation of implicit day ranges
This update make the evaluator understand values such as "08:00-18:00"
that do not also specify a day range such as "Mo-Fr 08:00-18:00".